[gd_scene load_steps=8 format=3 uid="uid://od0gmm01ipqe"]

[ext_resource type="Script" path="res://src/player/Player.gd" id="1_uux53"]
[ext_resource type="SpriteFrames" uid="uid://cfjmctpqnfyab" path="res://src/player/PlayerAnimations.tres" id="2_8x86r"]
[ext_resource type="AudioStream" uid="uid://ch4dda6eofxo4" path="res://assets/sfx/handgun-reload.mp3" id="5_jsrbw"]
[ext_resource type="PackedScene" uid="uid://febl5rj1q4ip" path="res://src/weapon/WeaponManager.tscn" id="60_112b0"]
[ext_resource type="AudioStream" uid="uid://bqw0m6t7pnebx" path="res://assets/sfx/handgun_shot.mp3" id="76_0vnl3"]
[ext_resource type="Script" path="res://src/player/AnimatedSprite.gd" id="155_s7kj3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xvq2f"]
radius = 38.4155
height = 141.85

[node name="Player" type="CharacterBody2D"]
scale = Vector2(0.5, 0.5)
slide_on_ceiling = false
script = ExtResource("1_uux53")
ACC = 52
FRICTION = 1189

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_8x86r")
animation = &"HandgunReload"
frame = 14
frame_progress = 1.0
offset = Vector2(29, -5)
script = ExtResource("155_s7kj3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(16, 8)
rotation = -2.25846
shape = SubResource("CapsuleShape2D_xvq2f")

[node name="SfxHandgunShot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("76_0vnl3")

[node name="SfxHandgunReload" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_jsrbw")

[node name="WeaponManager" parent="." instance=ExtResource("60_112b0")]

[connection signal="animation_changed" from="AnimatedSprite" to="AnimatedSprite" method="_on_animation_changed"]

[editable path="WeaponManager"]
